# py-qt-kirigami

./: .gitignore  README.md  br.com.justcode.Qt.json  build_linux.sh  pyproject.toml  tools.py
src/app/: main.py  resources_rc.py
src/app/ui/: MainWindow.py
src/resources/: br.com.justcode.Qt.desktop  resources.qrc
src/resources/locales/: br.com.justcode.Qt.pt_BR.qm  br.com.justcode.Qt.pt_BR.ts
src/resources/ui/: MainWindow.qml
